--- a/Starbucks/app/src/main/res/layout/activity_main.xml
+++ b/Starbucks/app/src/main/res/layout/activity_main.xml
@@ -23,15 +23,17 @@
 
     <Button
         android:id="@+id/btnPedir"
-        android:layout_width="200dp"
-        android:layout_height="70dp"
+        android:layout_width="185dp"
+        android:layout_height="65dp"
         android:backgroundTint="#0E5535"
+        android:background="@drawable/category_background"
         android:fontFamily="@font/aleo_bold"
         android:text="Pedir ya!"
-        android:textSize="20dp"
+        android:textSize="19dp"
+        android:textColor="@color/white"
         app2:layout_constraintBottom_toBottomOf="parent"
         app2:layout_constraintEnd_toEndOf="parent"
-        app2:layout_constraintHorizontal_bias="0.924"
+        app2:layout_constraintHorizontal_bias="0.927"
         app2:layout_constraintStart_toStartOf="parent"
         app2:layout_constraintTop_toBottomOf="@+id/imageView4"
         app2:layout_constraintVertical_bias="0.624" />
