--- a/Starbucks/app/src/main/res/values/themes.xml
+++ b/Starbucks/app/src/main/res/values/themes.xml
@@ -1,10 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Starbucks" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-         <item name="colorPrimary">#0E5535</item>
-        <item name="colorPrimaryVariant">#0E5535</item>
+    <style name="Base.Theme.Starbucks" parent="Theme.Material3.DayNight.NoActionBar">
+         <item name="colorPrimary">#1e3932</item>
+        <item name="colorPrimaryVariant">#1e3932</item>
          <item name="colorOnPrimary">@color/white</item>
 
         <item name="colorOnSecondary">@color/black</item>
     </style>
+
+    <style name="Theme.Starbucks" parent="Base.Theme.Starbucks" />
 </resources>
