--- a/Starbucks/app/src/main/res/layout/viewholder_product.xml
+++ b/Starbucks/app/src/main/res/layout/viewholder_product.xml
@@ -8,7 +8,7 @@
     android:elevation="3dp">
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/pic"
         android:layout_width="300dp"
         android:layout_height="175dp"
         android:scaleType="centerCrop"
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+        app:layout_constraintTop_toBottomOf="@+id/pic" />
 
     <TextView
         android:id="@+id/precio"
@@ -41,7 +41,7 @@
         android:textSize="16sp"
         android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/title"
-        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintEnd_toEndOf="@+id/pic"
         app:layout_constraintTop_toTopOf="@+id/title" />
 
     <ImageView
