--- a/Starbucks/app/src/main/res/layout/viewholder_category.xml
+++ b/Starbucks/app/src/main/res/layout/viewholder_category.xml
@@ -22,8 +22,9 @@
         android:id="@+id/categoryName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="TextView"
+        android:textAlignment="center"
         android:textColor="#d5d5d5"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
