--- a/Starbucks/app/src/main/res/layout/viewholder_product.xml
+++ b/Starbucks/app/src/main/res/layout/viewholder_product.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="260dp"
     android:layout_margin="8dp"
@@ -21,14 +22,14 @@
 
     <TextView
         android:id="@+id/title"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:textSize="18sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pic" />
 
@@ -48,9 +49,33 @@
         android:id="@+id/imageView7"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginEnd = "8dp"
+        android:layout_marginEnd="6dp"
         app:layout_constraintBottom_toBottomOf="@+id/precio"
         app:layout_constraintEnd_toStartOf="@+id/precio"
         app:layout_constraintTop_toTopOf="@+id/precio"
         app:srcCompat="@drawable/sol" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="@+id/pic"
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        app:srcCompat="@drawable/star" />
+
+    <TextView
+        android:id="@+id/star"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="1dp"
+        android:text="0"
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
+        app:layout_constraintStart_toEndOf="@+id/imageView5"
+        app:layout_constraintTop_toTopOf="@+id/imageView5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
