Arreglos de imagen/ Comenzando CreditCard

--- a/Starbucks/app/src/main/res/layout/activity_detail.xml
+++ b/Starbucks/app/src/main/res/layout/activity_detail.xml
@@ -32,14 +32,14 @@
 
                 <ImageView
                     android:id="@+id/imageView9"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="24dp"
                     android:padding="8dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/arrow" />
+                    app:srcCompat="@drawable/baseline_arrow_back_24" />
 
                 <LinearLayout
                     android:id="@+id/linearLayout2"
