--- a/Starbucks/app/src/main/res/values/themes.xml
+++ b/Starbucks/app/src/main/res/values/themes.xml
@@ -2,11 +2,20 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Starbucks" parent="Theme.Material3.DayNight.NoActionBar">
          <item name="colorPrimary">#1e3932</item>
-        <item name="colorPrimaryVariant">#1e3932</item>
+         <item name="colorPrimaryVariant">#1e3932</item>
          <item name="colorOnPrimary">@color/white</item>
-
         <item name="colorOnSecondary">@color/black</item>
     </style>
 
     <style name="Theme.Starbucks" parent="Base.Theme.Starbucks" />
+    
+    <style name="textStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="textStyleBold" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
