--- a/Starbucks/app/src/main/res/layout/activity_detail.xml
+++ b/Starbucks/app/src/main/res/layout/activity_detail.xml
@@ -216,10 +216,12 @@
                             android:id="@+id/numberItemTxt"
                             android:layout_width="wrap_content"
                             android:layout_height="35dp"
+                            android:layout_gravity="center_horizontal|center_vertical"
                             android:layout_marginStart="8dp"
                             android:layout_marginEnd="8dp"
                             android:gravity="center"
                             android:text="0"
+                            android:textAlignment="center"
                             android:textColor="@color/black"
                             android:textSize="21sp"
                             android:textStyle="bold" />
