--- a/Starbucks/app/src/main/res/layout/activity_detail.xml
+++ b/Starbucks/app/src/main/res/layout/activity_detail.xml
@@ -120,6 +120,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:text="0"
+                            android:textAlignment="center"
                             android:textColor="@color/black"
                             android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -127,7 +128,7 @@
                             app:layout_constraintHorizontal_bias="0.13"
                             app:layout_constraintStart_toEndOf="@+id/imageView10"
                             app:layout_constraintTop_toTopOf="@+id/imageView10"
-                            app:layout_constraintVertical_bias="0.0" />
+                            app:layout_constraintVertical_bias="0.04000002" />
 
                         <TextView
                             android:id="@+id/textView6"
