--- a/Starbucks/app/src/main/res/layout/activity_cart.xml
+++ b/Starbucks/app/src/main/res/layout/activity_cart.xml
@@ -38,7 +38,7 @@
         app:layout_constraintVertical_bias="0.050000012" />
 
 
-    <ImageView
+    <pl.droidsonroids.gif.GifImageView
         android:id="@+id/gif"
         android:layout_width="276dp"
         android:layout_height="256dp"
