--- a/Starbucks/app/src/main/res/layout/activity_cart.xml
+++ b/Starbucks/app/src/main/res/layout/activity_cart.xml
@@ -20,7 +20,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.56" />
+        app:layout_constraintVertical_bias="0.22000003" />
 
     <TextView
         android:id="@+id/empty02Txt"
@@ -37,7 +37,6 @@
         app:layout_constraintTop_toBottomOf="@+id/emptyTxt"
         app:layout_constraintVertical_bias="0.050000012" />
 
-
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/gif"
         android:layout_width="276dp"
@@ -50,14 +49,30 @@
         app:layout_constraintTop_toBottomOf="@+id/empty02Txt"
         app:layout_constraintVertical_bias="0.0" />
 
+    <ImageView
+        android:id="@+id/back01Btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:padding="2dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toStartOf="@+id/emptyTxt"
+        app:layout_constraintHorizontal_bias="0.18"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/baseline_arrow_back_24" />
+
+
     <ScrollView
         android:id="@+id/scrollViewC"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
             android:layout_width="match_parent"
